data_url/data_url_22232.txt
$ artiq_run repository/dac_setup.py
====== LLVM IR (BROKEN) DUMP ======
LLVM IR (broken) dumped as /tmp/tmp3hbuka_t.ll
Traceback (most recent call last):
File "/home/britton/anaconda3/envs/artiq-phaser/bin/artiq_run", line 11, in 
load_entry_point('artiq==3.0.dev0+159.gbf942fc', 'console_scripts', 'artiq_run')()
File "/home/britton/artiq-dev-phaser/artiq/artiq/frontend/artiq_run.py", line 221, in main
return run(with_file=True)
File "/home/britton/artiq-dev-phaser/artiq/artiq/frontend/artiq_run.py", line 207, in run
raise exn
File "/home/britton/artiq-dev-phaser/artiq/artiq/frontend/artiq_run.py", line 200, in run
exp_inst.run()
File "/home/britton/artiq-dev-phaser/artiq/artiq/language/core.py", line 54, in run_on_core
return getattr(self, arg).run(run_on_core, ((self,) + k_args), k_kwargs)
File "/home/britton/artiq-dev-phaser/artiq/artiq/coredevice/core.py", line 111, in run
self.compile(function, args, kwargs, set_result)
File "/home/britton/artiq-dev-phaser/artiq/artiq/coredevice/core.py", line 95, in compile
library = target.compile_and_link([module])
File "/home/britton/artiq-dev-phaser/artiq/artiq/compiler/targets.py", line 180, in compile_and_link
return self.link([self.assemble(self.compile(module)) for module in modules],
File "/home/britton/artiq-dev-phaser/artiq/artiq/compiler/targets.py", line 180, in 
return self.link([self.assemble(self.compile(module)) for module in modules],
File "/home/britton/artiq-dev-phaser/artiq/artiq/compiler/targets.py", line 140, in compile
llparsedmod = llvm.parse_assembly(str(llmod))
File "/home/britton/.local/lib/python3.5/site-packages/llvmlite_artiq/binding/module.py", line 22, in parse_assembly
raise RuntimeError("LLVM IR parsing error\n{0}".format(errmsg))
RuntimeError: LLVM IR parsing error
:16332:124: error: invalid field 'subprograms'
!1160 = distinct !DICompileUnit(emissionKind: 2, runtimeVersion: 0, language: DW_LANG_Python, producer: "ARTIQ", file: !6, subprograms: !1159)
^
Which llvmlite are you using?
(artiq-phaser) britton@britton1:~/artiq-dev-phaser/artiq/artiq/examples/phaser$ conda list llvm
llvm-or1k                 3.9.1                        14    m-labs/label/main
llvmlite-artiq            0.10.0.dev              py35_24    m-labs/label/main
Looks like I should be using llvm-or1k =3.8.
https://github.com/m-labs/artiq/blob/phaser/README_PHASER.rst
I downgraded. To confirm versions....
tmpon1bvix5.ll.gz
Yes, the problem is incorrect conda dependency that permits llvm-or1k 3.9 to be installed.
@jbqubit please confirm and show that you are using the correct versions. I can't reproduce this.
I confirmed versions in my second post. Should I be doing something other
than conda list?
On Wednesday, October 19, 2016, Robert Jördens notifications@github.com
wrote:
@jbqubit https://github.com/jbqubit please confirm and show that you
are using the correct versions. I can't reproduce this.
—
You are receiving this because you are subscribed to this thread.
Reply to this email directly, view it on GitHub
#592 (comment), or mute
the thread
https://github.com/notifications/unsubscribe-auth/AFbNxvFryuJjFaEMz8eOlrhZNq-ug9eXks5q1epRgaJpZM4KaZqo
.
You need to start being a bit more diligent about your python installations:
That's not a conda package at all.
You can either install the correct conda package or use the install-from-source instructions. If you do the latter, obviously don't additionally install those as conda packages.
Do you need us to make a phaser binary package for you?
resolved
